Update component structure Update routing layout

--- a/resources/assets/js/app/home/home.component.html
+++ b/resources/assets/js/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="ui equal width center aligned padded grid">
     <div class="row">
-      <h1>Photon Cycles</h1>
+      <h1 style="font-size: 60px">Photon Cycles</h1>
     </div>
     <div class="row">
       <div class="ui input focus">
@@ -10,6 +10,7 @@
     </div>
     <div class="row">
       <button
+              style="width: 195px"
               class="ui teal huge button"
               [routerLink]="['/menu']"
       >
