--- a/resources/assets/js/app/menu/menu.component.html
+++ b/resources/assets/js/app/menu/menu.component.html
@@ -1,1 +1,43 @@
-<div></div>
+<div>
+  <div class="ui equal width center aligned padded grid">
+    <div class="row">
+      <h1 style="font-size: 60px">Photon Cycles</h1>
+    </div>
+    <div class="row">
+      <button
+              style="width: 20%"
+              class="ui teal massive button"
+              [routerLink]="['/play']"
+      >
+        Play
+      </button>
+    </div>
+    <div class="row">
+      <button
+              style="width: 20%"
+              class="ui teal big button"
+              [routerLink]="['/rankings']"
+      >
+        Rankings
+      </button>
+    </div>
+    <div class="row">
+      <button
+              style="width: 20%"
+              class="ui teal big button"
+              [routerLink]="['/help']"
+      >
+        Help
+      </button>
+    </div>
+    <div class="row">
+      <button
+              style="width: 20%"
+              class="ui teal big button"
+              [routerLink]="['/home']"
+      >
+        Back
+      </button>
+    </div>
+  </div>
+</div>
