--- a/resources/assets/js/app/help/help.component.html
+++ b/resources/assets/js/app/help/help.component.html
@@ -6,44 +6,48 @@
       If you want to master Photon Cycle here are some advices to be a master Cycler:
     </h4>
     <div align="left">
-    <div class="ui list">
-      <a class="item">
-        <i class="right triangle icon"></i>
-        <div class="content">
-          <div class="description">Steer the game with your mouse</div>
-        </div>
-      </a>
-      <a class="item">
-        <i class="right triangle icon"></i>
-        <div class="content">
-          <div class="description">Beware of the wall! If you hit it, the round is over for you</div>
-        </div>
-      </a>
-      <a class="item">
-        <i class="right triangle icon"></i>
-        <div class="content">
-          <div class="description">Don’t touch the trail of other players, otherwise the round ends for you</div>
-        </div>
-      </a>
-      <a class="item">
-        <i class="right triangle icon"></i>
-        <div class="content">
-          <div class="description">Beware of other players, if you collide with another player, the round ends for both of you</div>
-        </div>
-      </a>
-      <a class="item">
-        <i class="right triangle icon"></i>
-        <div class="content">
-          <div class="description">You can play the game in full-screen. Just press 'Play' in the menu and use the button at the bottom right</div>
-        </div>
-      </a>
-    </div>
+      <div class="ui list">
+        <a class="item">
+          <i class="right triangle icon"></i>
+          <div class="content">
+            <div class="description">Steer the game with your mouse</div>
+          </div>
+        </a>
+        <a class="item">
+          <i class="right triangle icon"></i>
+          <div class="content">
+            <div class="description">Beware of the wall! If you hit it, the round is over for you</div>
+          </div>
+        </a>
+        <a class="item">
+          <i class="right triangle icon"></i>
+          <div class="content">
+            <div class="description">Don’t touch the trail of other players, otherwise the round ends for you</div>
+          </div>
+        </a>
+        <a class="item">
+          <i class="right triangle icon"></i>
+          <div class="content">
+            <div class="description">Beware of other players, if you collide with another player, the round ends for
+              both of you
+            </div>
+          </div>
+        </a>
+        <a class="item">
+          <i class="right triangle icon"></i>
+          <div class="content">
+            <div class="description">You can play the game in full-screen. Just press 'Play' in the menu and use the
+              button at the bottom right
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
   <button
-          style="width: 20%"
-          class="ui teal huge button"
-          [routerLink]="['/menu']"
+      style="width: 20%"
+      class="ui teal huge button"
+      [routerLink]="['/menu']"
   >
     Back
   </button>
