--- a/resources/assets/js/app/rankings/rankings.component.html
+++ b/resources/assets/js/app/rankings/rankings.component.html
@@ -3,10 +3,12 @@
 <div align="center">
   <table class="ui celled table" id="rankingTable">
     <thead>
-    <tr><th>Rank</th>
+    <tr>
+      <th>Rank</th>
       <th>Points</th>
       <th>Player</th>
-    </tr></thead>
+    </tr>
+    </thead>
     <tbody>
     <tr *ngFor="let r of rankings; let i = index">
       <td>
@@ -17,24 +19,26 @@
     </tr>
     </tbody>
     <tfoot>
-    <tr><th colspan="3">
-      <div class="ui right floated pagination menu">
-        <a class="icon item">
-          <i class="left chevron icon"></i>
-        </a>
-        <a class="item">1</a>
-        <a class="icon item">
-          <i class="right chevron icon"></i>
-        </a>
-      </div>
-    </th>
-    </tr></tfoot>
+    <tr>
+      <th colspan="3">
+        <div class="ui right floated pagination menu">
+          <a class="icon item">
+            <i class="left chevron icon"></i>
+          </a>
+          <a class="item">1</a>
+          <a class="icon item">
+            <i class="right chevron icon"></i>
+          </a>
+        </div>
+      </th>
+    </tr>
+    </tfoot>
   </table>
   <button
-          id="backButton"
-          style="width: 20%"
-          class="ui teal huge button"
-          [routerLink]="['/menu']"
+      id="backButton"
+      style="width: 20%"
+      class="ui teal huge button"
+      [routerLink]="['/menu']"
   >
     Back
   </button>
