--- a/frontend/src/app/components/password/response-reset/response-reset.component.html
+++ b/frontend/src/app/components/password/response-reset/response-reset.component.html
@@ -5,16 +5,16 @@
       <form #resetPasswordForm=ngForm (ngSubmit)="onSubmit()">
 
         <div class="form-group row">
-          <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-          <div class="col-sm-10">
+          <label for="inputPassword3" class="col-sm-3 col-form-label">Password</label>
+          <div class="col-sm-9">
             <input type="password" name="password" class="form-control" id="inputPassword3" placeholder="Password"
                    [(ngModel)]="form.password" required>
           </div>
         </div>
 
         <div class="form-group row">
-          <label for="inputPasswordConfirmation3" class="col-sm-2 col-form-label">Confirm Password</label>
-          <div class="col-sm-10">
+          <label for="inputPasswordConfirmation3" class="col-sm-3 col-form-label">Confirm Password</label>
+          <div class="col-sm-9">
             <input type="password" name="password_confirmation" class="form-control" id="inputPasswordConfirmation3"
                    placeholder="Confirm Password"
                    [(ngModel)]="form.password_confirmation" required>
@@ -25,8 +25,8 @@
         </div>
 
         <div class="form-group row">
-          <div class="col-sm-10 offset-2">
-            <button type="submit" class="btn btn-primary" [disabled]="!resetPasswordForm.valid">Change Password</button>
+          <div class="col-sm-9 offset-3">
+            <button type="submit" class="btn btn-info" [disabled]="!resetPasswordForm.valid">Change Password</button>
           </div>
         </div>
 
