--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -5,8 +5,8 @@
       <form #signupForm=ngForm (ngSubmit)="onSubmit()">
 
         <div class="form-group row">
-          <label for="inputName3" class="col-sm-2 col-form-label">Name</label>
-          <div class="col-sm-10">
+          <label for="inputName3" class="col-sm-3 col-form-label">Name</label>
+          <div class="col-sm-9">
             <input type="text" name="name" class="form-control" id="inputName3" placeholder="Name"
                    [(ngModel)]="form.name" required>
             <div class="text-danger" [hidden]="!error['name']">
@@ -16,8 +16,8 @@
         </div>
 
         <div class="form-group row">
-          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-          <div class="col-sm-10">
+          <label for="inputEmail3" class="col-sm-3 col-form-label">Email</label>
+          <div class="col-sm-9">
             <input type="email" name="email" class="form-control" id="inputEmail3" placeholder="Email"
                    [(ngModel)]="form.email" required>
             <div class="text-danger" [hidden]="!error['email']">
@@ -27,16 +27,16 @@
         </div>
 
         <div class="form-group row">
-          <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-          <div class="col-sm-10">
+          <label for="inputPassword3" class="col-sm-3 col-form-label">Password</label>
+          <div class="col-sm-9">
             <input type="password" name="password" class="form-control" id="inputPassword3" placeholder="Password"
                    [(ngModel)]="form.password" required>
           </div>
         </div>
 
         <div class="form-group row">
-          <label for="inputPasswordConfirmation3" class="col-sm-2 col-form-label">Confirm Password</label>
-          <div class="col-sm-10">
+          <label for="inputPasswordConfirmation3" class="col-sm-3 col-form-label">Confirm Password</label>
+          <div class="col-sm-9">
             <input type="password" name="password_confirmation" class="form-control" id="inputPasswordConfirmation3"
                    placeholder="Confirm Password"
                    [(ngModel)]="form.password_confirmation" required>
@@ -47,8 +47,8 @@
         </div>
 
         <div class="form-group row">
-          <div class="col-sm-10 offset-2">
-            <button type="submit" class="btn btn-primary" [disabled]="!signupForm.valid">Sign up</button>
+          <div class="col-sm-9 offset-3">
+            <button type="submit" class="btn btn-info text-white" [disabled]="!signupForm.valid">Sign up</button>
             <a routerLink="/login" class="btn btn-info float-right">Sign in</a>
           </div>
         </div>
